[gd_scene load_steps=11 format=3 uid="uid://djtdi8njs4f0g"]

[ext_resource type="Script" uid="uid://bj2hfrp0dncgw" path="res://scripts/rewards.gd" id="1_j434p"]
[ext_resource type="FontFile" uid="uid://wvmpndo8ivh1" path="res://assets/Lister.ttf" id="2_dljfl"]
[ext_resource type="FontFile" uid="uid://c4a3vwvhfg2lc" path="res://assets/the bubble letters.ttf" id="3_20whg"]
[ext_resource type="AudioStream" uid="uid://cq5vcfdx7j5ot" path="res://assets/menu_music.mp3" id="4_dljfl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx632"]
bg_color = Color(0.73045343, 0.5721267, 0.29007217, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcm0h"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_heu3r"]
bg_color = Color(0.3817034, 0.38170314, 0.3817034, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gpp2x"]
bg_color = Color(0.796243, 0.796243, 0.796243, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ynmac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhwa2"]
content_margin_top = 24.0

[node name="Rewards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j434p")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yx632")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dljfl")
theme_override_font_sizes/font_size = 128
text = "First battle cleared"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_20whg")
theme_override_font_sizes/font_size = 32
text = "info"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 139
alignment = 1

[node name="RewardCard1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fcm0h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_heu3r")
theme_override_styles/hover = SubResource("StyleBoxFlat_gpp2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ynmac")

[node name="CardContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard1"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 0
offset_left = -6.0
offset_top = -3.0
offset_right = 404.0
offset_bottom = 503.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard1/CardContent"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dljfl")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhwa2")
text = "Title"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard1/CardContent"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_20whg")
theme_override_font_sizes/font_size = 23
text = "Description goes here it is a long description because i make a good description very descriptive"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RewardCard2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fcm0h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_heu3r")
theme_override_styles/hover = SubResource("StyleBoxFlat_gpp2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ynmac")

[node name="CardContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard2"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 0
offset_left = -6.0
offset_top = -3.0
offset_right = 405.0
offset_bottom = 503.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard2/CardContent"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dljfl")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhwa2")
text = "Title"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard2/CardContent"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_20whg")
theme_override_font_sizes/font_size = 23
text = "Description goes here it is a long description because i make a good description very descriptive"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RewardCard3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_fcm0h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_heu3r")
theme_override_styles/hover = SubResource("StyleBoxFlat_gpp2x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ynmac")

[node name="CardContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard3"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 0
offset_left = -6.0
offset_top = -3.0
offset_right = 402.0
offset_bottom = 503.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard3/CardContent"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dljfl")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_rhwa2")
text = "Title"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RewardCard3/CardContent"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_20whg")
theme_override_font_sizes/font_size = 23
text = "Description goes here it is a long description because i make a good description very descriptive"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dljfl")
volume_db = -31.486
autoplay = true
parameters/looping = true
